Correctly handle KDE executables typed into the OpenWith dialog.

BUG: 222519
REVIEW: 111272
FIXED-IN: 4.11